services/stalwart/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  namespace: stalwart
  labels:
    app.kubernetes.io/name: stalwart
spec:
  type: ClusterIP
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
      protocol: TCP
    - name: submission
      port: 587
      targetPort: submission
      protocol: TCP
    - name: submissions
      port: 465
      targetPort: submissions
      protocol: TCP
    - name: imap
      port: 143
      targetPort: imap
      protocol: TCP
    - name: imaptls
      port: 993
      targetPort: imaptls
      protocol: TCP
    - name: sieve
      port: 4190
      targetPort: sieve
      protocol: TCP
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: stalwart
