services/stalwart/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: stalwart
  namespace: stalwart
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: stalwart
  healthCheck:
    active:
      type: HTTP
      http:
        path: /
        expectedStatuses:
          - 200
          - 301
          - 302
      interval: 10s
      timeout: 5s
      unhealthyThreshold: 3
      healthyThreshold: 1
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 50
            unit: Second
