services/stalwart/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Stalwart
    gethomepage.dev/description: Servidor de correo (SMTP/IMAP/JMAP)
    gethomepage.dev/group: Plataforma
    gethomepage.dev/icon: stalwart.png
    gethomepage.dev/href: https://stalwart.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - stalwart.bonchan.org
  rules:
    - backendRefs:
        - name: stalwart
          port: 8080
